--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,11 +1,11 @@
-.TH UGREP "1" "August 17, 2019" "ugrep 1.3.8" "User Commands"
+.TH UGREP "1" "September 04, 2019" "ugrep 1.4.0" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
 .B ugrep
-[\fIOPTIONS\fR] [\fB-A\fR \fINUM\fR] [\fB-B\fR \fINUM\fR] [\fB-C\fR[\fINUM\fR]] [\fIPATTERN\fR] [\fB-e\fR \fIPATTERN\fR]
-      [\fB--color\fR[=\fIWHEN\fR]|\fB--colour\fR[=\fIWHEN\fR]] [\fB--pager\fR[=\fICOMMAND\fR]]
-      [\fB-f\fR \fIFILE\fR] [\fB-t\fR \fITYPES\fR] [\fB-Q\fR \fIENCODING\fR] [\fIFILE\fR \fI...\fR]
+[\fIOPTIONS\fR] [\fB-A\fR \fINUM\fR] [\fB-B\fR \fINUM\fR] [\fB-C\fR[\fINUM\fR]] [\fIPATTERN\fR] [\fB-f\fR \fIFILE\fR]
+      [\fB-e\fR \fIPATTERN\fR] [\fB-t\fR \fITYPES\fR] [\fB-Q\fR \fIENCODING\fR] [\fB-J\fR[\fIJOBS\fR]]
+      [\fB--color\fR[=\fIWHEN\fR]|\fB--colour\fR[=\fIWHEN\fR]] [\fB--pager\fR[=\fICOMMAND\fR]] [\fIFILE\fR \fI...\fR]
 .SH DESCRIPTION
 The \fBugrep\fR utility searches any given input files, selecting lines that
 match one or more patterns.  By default, a pattern matches an input line if the
@@ -82,9 +82,9 @@ marks up matches only when output on a terminal.
 .TP
 \fB\-D\fR \fIACTION\fR, \fB\-\-devices\fR=\fIACTION\fR
 If an input file is a device, FIFO or socket, use ACTION to process
-it.  By default, ACTION is `read', which means that devices are
-read just as if they were ordinary files.  If ACTION is `skip',
-devices are silently skipped.
+it.  By default, ACTION is `skip', which means that devices are
+silently skipped.  If ACTION is `read', devices read just as if
+they were ordinary files.
 .TP
 \fB\-d\fR \fIACTION\fR, \fB\-\-directories\fR=\fIACTION\fR
 If an input file is a directory, use ACTION to process it.  By
@@ -241,11 +241,11 @@ otherwise.
 .TP
 \fB\-M\fR \fIMAGIC\fR, \fB\-\-file\-magic\fR=\fIMAGIC\fR
 Only files matching the signature pattern `MAGIC' are searched.
-The signature magic bytes at the start of a file are compared to
+The signature "magic bytes" at the start of a file are compared to
 the `MAGIC' regex pattern.  When matching, the file will be
 searched.  This option may be repeated and may be combined with
 options \fB\-O\fR and \fB\-t\fR to expand the search.  This option is relatively
-slow as every file on the search path is read.
+slow as every file on the search path is read to compare `MAGIC'.
 .TP
 \fB\-m\fR \fINUM\fR, \fB\-\-max\-count\fR=\fINUM\fR
 Stop reading the input after NUM matches for each file processed.
@@ -452,7 +452,8 @@ path separator `/', the pathname is matched.  Otherwise the basename of a file
 or directory is matched.  For example, \fB*.h\fR matches \fIfoo.h\fR and
 \fIbar/foo.h\fR.  \fBbar/*.h\fR matches \fIbar/foo.h\fR but not \fIfoo.h\fR and
 not \fIbar/bar/foo.h\fR.  Use a leading `/' to force \fB/*.h\fR to match
-\fIfoo.h\fR but not \fIbar/foo.h\fR.
+\fIfoo.h\fR but not \fIbar/foo.h\fR.  A glob starting with a `!' is negated,
+i.e. does not match.
 .PP
 \fBGlob Syntax and Conventions\fR
 .IP \fB*\fR
