--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,10 +1,10 @@
-.TH UGREP "1" "September 15, 2019" "ugrep 1.4.4" "User Commands"
+.TH UGREP "1" "September 30, 2019" "ugrep 1.5.0" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
 .B ugrep
 [\fIOPTIONS\fR] [\fB-A\fR \fINUM\fR] [\fB-B\fR \fINUM\fR] [\fB-C\fR[\fINUM\fR]] [\fIPATTERN\fR] [\fB-f\fR \fIFILE\fR]
-      [\fB-e\fR \fIPATTERN\fR] [\fB-t\fR \fITYPES\fR] [\fB-Q\fR \fIENCODING\fR] [\fB-J\fR[\fIJOBS\fR]]
+      [\fB-e\fR \fIPATTERN\fR] [\fB-t\fR \fITYPES\fR] [\fB-Q\fR \fIENCODING\fR] [\fB-J\fR [\fINUM\fR]]
       [\fB--color\fR[=\fIWHEN\fR]|\fB--colour\fR[=\fIWHEN\fR]] [\fB--pager\fR[=\fICOMMAND\fR]] [\fIFILE\fR \fI...\fR]
 .SH DESCRIPTION
 The \fBugrep\fR utility searches any given input files, selecting lines that
@@ -214,11 +214,11 @@ and \fB\-\-include\-dir\fR).  Lines starting with a `#' and empty lines in
 FILE are ignored.  When FILE is a `\fB\-'\fR, standard input is read.
 This option may be repeated.
 .TP
-\fB\-J\fR[NUM], \fB\-\-jobs\fR[=\fI\fR\fINUM\fR]
-Specifies the number of jobs to run simultaneously to search files.
-Without argument NUM, the number of jobs spawned is optimized.
-No whitespace may be given between \fB\-J\fR and its argument NUM.
-This feature is not available in this version of ugrep.
+\fB\-J\fR \fINUM\fR, \fB\-\-jobs\fR=\fINUM\fR
+Specifies the number of threads spawned to search files.  By
+default, an optimum number of threads is spawned to search files
+simultaneously.  \fB\-J\fR1 disables threading: matching files are output
+in the same order as the specified files.
 .TP
 \fB\-j\fR, \fB\-\-smart\-case\fR
 Perform case insensitive matching unless PATTERN contains a capital
@@ -576,7 +576,7 @@ SGR substring for byte offsets.
 SGR substring for separators.
 .SH FORMAT
 Option \fB--format\fR=\fIFORMAT\fR specifies an output format for file matches.
-The following fields may be used in \fIFORMAT\fR:
+Fields may be used in \fIFORMAT\fR which expand into the following values:
 .IP \fB%[\fR\fIARG\fR\fB]F\fR
 if option \fB-H\fR is used: \fIARG\fR, the file pathname, and separator.
 .IP \fB%[\fR\fIARG\fR\fB]H\fR
@@ -596,7 +596,7 @@ if the first match: \fIARG\fR.
 .IP \fB%[\fR\fIARG\fR\fB]>\fR
 if not the first match: \fIARG\fR.
 .IP \fB%[\fR\fISEP\fR\fB]$\fR
-set field separator to \fISEP\fR for the rest of the format.
+set field separator to \fISEP\fR for the rest of the format fields.
 .IP \fB%f\fR
 the file pathname.
 .IP \fB%h\fR
@@ -618,7 +618,7 @@ the number of matches or matched files.
 .IP \fB%o\fR
 the match as a raw string of bytes.
 .IP \fB%q\fR
-the match as a quoted string replacing " and \\ by \\" and \\\\.
+the match as a quoted string, replacing " and \\ by \\" and \\\\.
 .IP \fB%c\fR
 the match formatted as a quoted C/C++ string.
 .IP \fB%j\fR
@@ -643,29 +643,30 @@ if not the first match: a verical bar, same as \fB%[|]>\fR.
 the percentage sign.
 .IP \fB%1\fR
 the first regex group capture of the match, and so on up to group \fB%9\fR,
-requires option \fB-P\fR Perl matching.
+same as \fB%[1]#\fR, requires option \fB-P\fR Perl matching.
+.IP \fB%[\fINUM\fR\fB]#\fR
+the regex group capture \fINUM\fR, requires option \fB-P\fR Perl matching.
 .PP
 The \fB[\fR\fIARG\fR\fB]\fR part of a field is optional and may be omitted.
 .PP
 The separator used by \fB%P\fR, \fB%H\fR, \fB%N\fR, \fB%K\fR, \fB%B\fR, and
 \fB%S\fR may be changed by preceeding the field with a
-\fB%[\fR\fISEP\fR\fB]$\fR.  When \fB[\fR\fISEP\fR\fB]\fR is not provided,
-reverses the separator to the default separator or the separator specified by
-\fB--separator\fR.
+\fB%[\fR\fISEP\fR\fB]$\fR.  When \fB[\fR\fISEP\fR\fB]\fR is not provided as in
+\fB%$\fR, reverses the separator to the default separator or the separator
+specified by \fB--separator\fR.
 .PP
-Matches are formatted without context.  To output the line of a match, use
-pattern '.*\fIPATTERN\fR.*' to capture the entire line, not just a match of
-\fIPATTERN\fR.
+Matches are formatted without context.  To output the entire line with the match,
+use pattern '.*\fIPATTERN\fR.*' to match the line before and after the match.
 .PP
 Additional formatting options:
 .IP \fB--format-begin\fR=\fIFORMAT\fR
-output \fIFORMAT\fR when beginning the search.
+the \fIFORMAT\fR when beginning the search.
 .IP \fB--format-open\fR=\fIFORMAT\fR
-output \fIFORMAT\fR when opening a file and a match was found.
+the \fIFORMAT\fR when opening a file and a match was found.
 .IP \fB--format-close\fR=\fIFORMAT\fR
-output \fIFORMAT\fR when closing a file and a match was found.
+the \fIFORMAT\fR when closing a file and a match was found.
 .IP \fB--format-end\fR=\fIFORMAT\fR
-output \fIFORMAT\fR when ending the search.
+the \fIFORMAT\fR when ending the search.
 .PP
 The context options \fB-A\fR, \fB-B\fR, \fB-C\fR, \fB-y\fR, and options
 \fB-v\fR, \fB--break\fR, \fB--color\fR, \fB-T\fR, and \fB--null\fR are disabled
